<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".SubscriptionActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/left_arrow" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/back"
        android:layout_marginTop="10dp"
        android:background="@drawable/light_color_background">

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:cardElevation="20dp"
            app:cardCornerRadius="30dp">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/slider"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layoutDirection="inherit"
                app:iss_auto_cycle="true"
                app:iss_delay="1000"
                app:iss_indicator_align="@string/bottom_sheet_behavior"
                app:iss_period="1000"
                app:iss_selected_dot="@drawable/default_selected_dot"
                app:iss_unselected_dot="@drawable/default_unselected_dot" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="25dp"
                android:layout_height="150dp"
                app:cardCornerRadius="20dp"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text1"
                        android:layout_gravity="center"
                        android:textColor="@color/green"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins_semibold"
                        android:textFontWeight="500"
                        android:text="@string/basic" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_semibold"
                        android:textFontWeight="500"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price" />

                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:textSize="10sp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:background="@color/grey"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_light"
                        android:textFontWeight="500"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/unlimited" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_width="25dp"
                android:layout_height="170dp"
                app:cardCornerRadius="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text2"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textAlignment="center"
                        android:paddingTop="15dp"
                        android:textColor="@color/green"
                        android:textFontWeight="500"
                        android:textSize="14sp"
                        android:textAllCaps="false"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/plus" />

                    <TextView
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/green"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins_light"
                        android:textFontWeight="500"
                        android:text="@string/plus" />


                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_semibold"
                        android:textFontWeight="500"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price1" />

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:textSize="10sp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:background="@color/grey"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_light"
                        android:textFontWeight="500"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/unlimited_png" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_width="25dp"
                android:layout_height="150dp"
                app:cardCornerRadius="20dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text3"
                        android:layout_gravity="center"
                        android:textColor="@color/green"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins_semibold"
                        android:textFontWeight="500"
                        android:text="@string/gold" />

                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_semibold"
                        android:textFontWeight="500"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price2" />

                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:textSize="10sp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:background="@color/grey"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_light"
                        android:textFontWeight="500"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/unlimited" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <Button
            android:id="@+id/subscribe_now"
            android:layout_below="@+id/linear"
            android:layout_marginTop="20dp"
            android:background="@drawable/pro_button_design"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_marginRight="130dp"
            android:layout_marginLeft="130dp"
            android:paddingTop="4dp"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_light"
            android:textFontWeight="500"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/subscribe" />

        <TextView
            android:id="@+id/detail"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_below="@id/subscribe_now"
            android:textSize="12sp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_light"
            android:textFontWeight="500"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail" />

        <LinearLayout
            android:id="@+id/links"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/detail"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/privacy_policy"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semibold"
                android:textFontWeight="500"
                android:textAlignment="inherit"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:text="@string/policy" />

            <TextView
                android:id="@+id/terms_conditions"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semibold"
                android:textFontWeight="500"
                android:textAlignment="inherit"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/terms" />

        </LinearLayout>

        <TextView
            android:layout_below="@id/links"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_light"
            android:textFontWeight="500"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail1" />

    </RelativeLayout>

</RelativeLayout>